// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic route tests should respond with 404 on non existing route 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
<meta charset=\\"utf-8\\">
<title>Error</title>
</head>
<body>
<pre>Cannot POST /middlelayer/foo</pre>
</body>
</html>
"
`;

exports[`basic route tests should responde with success on calibrate 1`] = `
Object {
  "message": "Your request to /calibrate is beeing processed",
  "sessionID": Any<String>,
  "success": true,
  "version": "0.2.0",
}
`;

exports[`basic route tests should responde with success on model 1`] = `
Object {
  "message": "Your request to /model is beeing processed",
  "sessionID": Any<String>,
  "success": true,
  "version": "0.2.0",
}
`;

exports[`basic route tests should responde with success on predict 1`] = `
Object {
  "message": "Your request to /predict is beeing processed",
  "sessionID": Any<String>,
  "success": true,
  "version": "0.2.0",
}
`;
